--- a/wiki/leo.wikitext
+++ b/wiki/leo.wikitext
@@ -1,1 +1,24 @@
-#redirect [[leo]]
+==English==
+===Proper noun===
+'''Leo'''
+
+# a male given name. Sometimes a short form of [[Leonard]]. cf [[Leon]].
+# A [[constellation]] of stars supposedly shaped like a [[lion]].
+# The [[Zodiac]] sign for the [[lion]], covering July 23 - August 22.
+
+====Antonyms====
+*[[Aquarius]]
+
+====Translations====
+*Danish: [[løven]] ''c'' (3)
+*Dutch: [[Leo]] ''m'' (1), [[leeuw]] ''m'' (3)
+*Finnish: [[Leijona]] (2, 3), [[Jalopeura]] (2, 3)
+*French: [[Léon]], [[Lion]]
+*German:  [[Löwe]] ''m''
+*Italian: [[Leone]]
+*Japanese: [[しし座]]
+*Polish: Lew ''m'' (2, 3)
+*Spanish:  [[león]] ''m''
+
+===See also===
+*[[leo]]
