--- a/wiki/weed.wikitext
+++ b/wiki/weed.wikitext
@@ -1,6 +1,6 @@
 ==English==
 ===Etymology===
-n. {{OE.}} ''weod'' "grass, herb, weed," from Proto-Germanic ''*weud-''
+n. {{OE.}} ''weod'' "grass, herb, weed," from Proto-Germanic ''*weud-''<br>
 v. {{OE.}} ''weodian'', from ''weod''
 
 ===Noun===
