--- a/wiki/Tc.wikitext
+++ b/wiki/Tc.wikitext
@@ -1,10 +1,9 @@
-==Translingual==
-===Symbol===
-'''Tc'''
-#{{chemistry}} symbol for [[technetium]]
-[[Category:Symbols]]
+==English==
+==={{initialism}}===
+'''TC'''
+#Topic Closed.  Used in [[Internet forum]]s to announce that a topic thread is locked, indicating that no further replies are allowed in that topic thread.
 ===See also===
-*[[TC]]
+*[[Tc]]
 [[fr:Tc]]
 [[ja:Tc]]
 [[pl:Tc]]
