--- a/wiki/Ru.wikitext
+++ b/wiki/Ru.wikitext
@@ -1,4 +1,7 @@
-'''Ru'''<br>{{chemistry}} symbol for [[ruthenium]]
+==Translingual==
+===Symbol===
+'''Ru'''
+#{{chemistry}} symbol for [[ruthenium]]
 [[Category:Symbols]]
 
 [[fr:Ru]]
