--- a/wiki/Rh.wikitext
+++ b/wiki/Rh.wikitext
@@ -1,4 +1,7 @@
-'''Rh'''<br>{{chemistry}} symbol for [[rhodium]]
+==Translingual==
+===Symbol===
+'''Rh'''
+#{{chemistry}} symbol for [[rhodium]]
 [[Category:Symbols]]
 
 [[fr:Rh]]
