--- a/wiki/Espanja.wikitext
+++ b/wiki/Espanja.wikitext
@@ -1,7 +1,1 @@
-==Finnish==
-===Proper noun===
-'''Espanja'''
-#[[Spain]]
-===Noun===
-'''espanja'''
-#[[Spanish]] [[language]]
+#redirect [[Espanja]]
