[[rh]] moved to [[Rh]]: uppercase <rh#174325>

--- a/wiki/Rh.wikitext
+++ b/wiki/Rh.wikitext
@@ -1,9 +1,1 @@
-==Translingual==
-===Symbol===
-'''Rh'''
-#{{chemistry}} symbol for [[rhodium]]
-[[Category:Symbols]]
-
-[[fr:Rh]]
-[[ja:Rh]]
-[[pl:Rh]]
+#redirect [[Rh]]
