--- a/wiki/leo.wikitext
+++ b/wiki/leo.wikitext
@@ -1,24 +1,36 @@
-==English==
-===Proper noun===
-'''Leo'''
+==Irish==
+===Pronunciation===
+{{IPA|[l&#690;oː]}}
+===Prepositional pronoun===
+[[Third person]] [[plural]] form of [[le]] '[[with]]'
+#[[with]] [[them]]
 
-# a male given name. Sometimes a short form of [[Leonard]]. cf [[Leon]].
-# A [[constellation]] of stars supposedly shaped like a [[lion]].
-# The [[Zodiac]] sign for the [[lion]], covering July 23 - August 22.
+----
 
-====Antonyms====
-*[[Aquarius]]
+==Latin==
+===Noun===
+'''leo''' ''m'', genitive '''[[leonis]]''', plural '''[[leones]]'''
 
-====Translations====
-*Danish: [[løven]] ''c'' (3)
-*Dutch: [[Leo]] ''m'' (1), [[leeuw]] ''m'' (3)
-*Finnish: [[Leijona]] (2, 3), [[Jalopeura]] (2, 3)
-*French: [[Léon]], [[Lion]]
-*German:  [[Löwe]] ''m''
-*Italian: [[Leone]]
-*Japanese: [[しし座]]
-*Polish: Lew ''m'' (2, 3)
-*Spanish:  [[león]] ''m''
+Third declension
 
-===See also===
-*[[leo]]
+#a [[lion]]
+
+====Derived terms====
+* [[leonid]]
+* [[leoninus]]
+* [[lion]]
+* [[lion cub]]
+* [[lioness]]
+
+===Related Terms===
+*[[Leon]]
+*[[Leonard]]
+----
+
+==Spanish==
+===Verb form===
+'''leo'''
+
+# ''first-person singular indicative present of [[leer]]''
+
+[[pl:leo]]
