[[bA]] moved to [[BA]] <BA#5222>

--- a/wiki/ba.wikitext
+++ b/wiki/ba.wikitext
@@ -1,47 +1,12 @@
 ==English==
-===Etymology===
-Compare Old French ''[[baer]]'' to open the mouth; French ''[[bayer]]''.
 
-===Intransitive verb===
-#''(obsolete)'' To [[kiss]]
+==={{Abbreviation}}===
+'''BA'''
+# Bachelor of Arts ''(degree)''
+# British Airways
 
------
-
-== Vietnamese ==
-
-=== [[Pronunciation]] ===
-*[[SAMPA]]: /ba/
-*[[SAMPROSA]]: /-[ba]/
-*[[International Phonetic Alphabet|IPA]]: /bā/
-
-=== Cardinal number ===
-'''ba'''
-#[[three]]
-
-====Related terms====
-*[[tháng ba]]
-*[[thứ ba]], [[ngày thứ ba]]
-
-===Noun===
-'''ba'''
-#[[father]]
-
-=== Adjective ===
-'''ba'''
-#a [[few#Pronoun|few]], a [[couple]], [[several]], a [[handful]] of
-
------
-
-== Volapük ==
-=== Adverb ===
-'''ba'''
-#[[perhaps]]
-
-[[fr:Ba]]
-[[nl:ba]]
-[[ja:Ba]]
-[[pl:Ba]]
-
-== See also ==
-*[[Ba]]
-*[[BA]]
+----
+==Portuguese==
+==={{Abbreviation}}===
+'''BA'''
+# [[Bahia]] (Brazilian state)
