--- a/wiki/Pd.wikitext
+++ b/wiki/Pd.wikitext
@@ -1,4 +1,7 @@
-'''Pd'''<br>{{chemistry}} symbol for [[palladium]]
+==Translingual==
+===Symbol===
+'''Pd'''
+#{{chemistry}} symbol for [[palladium]]
 [[Category:Symbols]]
 
 [[fr:Pd]]
