[[cA]] moved to [[CA]] <CA#5452>

--- a/wiki/CA.wikitext
+++ b/wiki/CA.wikitext
@@ -1,7 +1,6 @@
-==Translingual==
-===Symbol===
-'''Ca'''
-# {{chemistry}} symbol for element [[calcium]]
-===See also===
-*[[ca]]
-[[Category:Symbols]]
+==English==
+
+==={{Abbreviation}}===
+#[[California]], a {{USstate}}
+
+[[pl:CA]]
