--- a/wiki/BTW.wikitext
+++ b/wiki/BTW.wikitext
@@ -1,1 +1,13 @@
-#REDIRECT [[BTW]]
+==English==
+
+==={{Abbreviation}}===
+'''BTW'''
+# ''(Internet):'' [[By the way]].
+
+----
+==Dutch==
+===Abbreviation===
+'''BTW'''
+#(''abbreviation of'' '''[[belasting op de toegevoegde waarde]]''') [[VAT]]
+
+[[pl:BTW]]
