--- a/wiki/Pd.wikitext
+++ b/wiki/Pd.wikitext
@@ -1,9 +1,1 @@
-==Translingual==
-===Symbol===
-'''Pd'''
-#{{chemistry}} symbol for [[palladium]]
-[[Category:Symbols]]
-
-[[fr:Pd]]
-[[ja:Pd]]
-[[pl:Pd]]
+#redirect [[Pd]]
