[[bOF]] moved to [[BOF]] <BOF#3269>

--- a/wiki/BOF.wikitext
+++ b/wiki/BOF.wikitext
@@ -1,6 +1,10 @@
-==French==
-'''bof!'''
-===Interjection===
-# [[So what]]!, [[Nevermind]]
-====See Also====
-* [[BOF]]
+==English==
+
+==={{Abbreviation}}===
+'''BOF'''
+# {{cattag|computing}}: Beginning of file.
+# ''(Internet):'' Big old frown.
+# Birds of a Feather: group of people with common interests (from the phrase "Birds of a feather flock together.")
+
+===Related Terms===
+*[[EOF]]
