[[cDE]] moved to [[CDE]] <CDE#90608>

--- a/wiki/CDE.wikitext
+++ b/wiki/CDE.wikitext
@@ -1,1 +1,6 @@
-#REDIRECT [[CDE]]
+==English==
+==={{Initialism}}===
+'''CDE'''
+
+#{{computing}}: Common Desktop Environment
+#(''Australia'') Coastal Depositional Environment
