lowercase version <hg#32978>

--- a/wiki/HG.wikitext
+++ b/wiki/HG.wikitext
@@ -1,1 +1,16 @@
-#redirect [[hg]]
+==Translingual==
+===Symbol===
+'''Hg'''
+# see [[Hg]]
+
+----
+
+==English==
+===Symbol===
+'''hg'''
+#[[hectogram]] / [[hectogramme]]
+===See also===
+*[[Hg]]
+[[fr:Hg]]
+[[ja:Hg]]
+[[pl:Hg]]
