uppercase version <Hg#132493>

--- a/wiki/HG.wikitext
+++ b/wiki/HG.wikitext
@@ -1,16 +1,9 @@
 ==Translingual==
+===Etymology===
+{{L.}} ''[[hydrargyrus]]''
 ===Symbol===
 '''Hg'''
-# see [[Hg]]
-
-----
-
-==English==
-===Symbol===
-'''hg'''
-#[[hectogram]] / [[hectogramme]]
+#{{chemistry}} symbol for [[mercury]]
 ===See also===
-*[[Hg]]
-[[fr:Hg]]
-[[ja:Hg]]
-[[pl:Hg]]
+*[[hg]]
+[[Category:Symbols]]
