--- a/wiki/guard.wikitext
+++ b/wiki/guard.wikitext
@@ -5,7 +5,7 @@
 #a person who [[protect]]s or [[watches]] [[over]] something
 #a part of a [[machine]] which [[block]]s [[access]] to [[dangerous]] [[part]]s
 #(''Aus'') [[panel]] of a [[car]] which [[enclose]]s the [[wheel]] [[area]], especially the front wheels.
-# (''basketball'') A [[relatively]] [[short]] [[player]], playing [[farther]] from the [[basket]] than a [[forward]] or [[center]].
+# {{cattag|basketball}} A [[relatively]] [[short]] [[player]], playing [[farther]] from the [[basket]] than a [[forward]] or [[center]].
 #{{cricket}} The [[position]] on the [[popping crease]] where a [[batsman]] makes a [[mark]] to [[align]] [[himself]] with the [[wicket]] (see to [[take guard]])
 
 ====Synonyms====
