inflections; pron <consult#181215>

--- a/wiki/consult.wikitext
+++ b/wiki/consult.wikitext
@@ -1,16 +1,29 @@
 ==English==
 ===Transitive verb===
-'''consult'''
-#To [[ask]] or [[communicate]] with.
+{{en-infl-reg-consonant|consult||}}
+
+====Pronunciation====
+*[[AHD]]: kənsŭlt'
+*[[IPA]]: /kənˈsʌlt/
+*[[SAMPA]]: /<tt>k@n"sVlt</tt>/
+
+#To [[ask]] or [[communicate]] with in order to seek the opinion or permission of.
 #:''I will have to '''consult''' my husband before I buy anything that costly.''
 
 ===Intransitive verb===
-'''consult'''
+{{en-infl-reg-consonant|consult||}}
+
 #To [[advise]] or offer expertise.
 #To work as a [[consultant]] or [[contractor]] rather than as a full-time [[employee]] of a firm.
 
 ===Noun===
-'''consult'''
-#A visit, e.g. with a doctor; a [[consultation]].
+'''consult''' (''plural'' '''consults''')
+
+====Pronunciation====
+*AHD: kŏn'sŭlt ''or'' kənsŭlt'
+*IPA: (''[[RP]]''): /ˈkɒnsʌlt/ ''or'' /kənˈsʌlt/; (''US''): /ˈkɑnsʌlt/ ''or'' /kənˈsʌlt/
+*SAMPA: (''RP''): /<tt>"kQnsVlt</tt>/ ''or'' /<tt>k@n"sVlt</tt>/; (''US''): /<tt>"kAnsVlt</tt>/ ''or'' /<tt>k@n"sVlt</tt>/
+
+#A visit, e.g. to a doctor; a [[consultation]].
 
 [[Category:English heteronyms]]
