--- a/wiki/biometry.wikitext
+++ b/wiki/biometry.wikitext
@@ -1,1 +1,4 @@
-This term literally means "biological measurement" (deriving from the [[Greek language|Greek]] words ''bios'' = life and ''metro'' = count/measure).
+==English==
+===Noun===
+'''biometry'''
+# the [[analysis]] of [[biological]] [[statistical]] [[data]]; [[biometrics]]
