--- a/wiki/vaccinate.wikitext
+++ b/wiki/vaccinate.wikitext
@@ -5,7 +5,9 @@
 '''to vaccinate'''
 # Treat with a [[vaccine]] to produce [[immunity]] against a [[disease]].
 ====Translations====
+*Finnish: [[rokottaa]]
 *German: [[impfen]] (1)
+*Spanish: [[vacunar]]
 
 ===Related terms===
 *[[vaccination]]
