--- a/wiki/biorobot.wikitext
+++ b/wiki/biorobot.wikitext
@@ -1,13 +1,13 @@
 ==English==
 
 ===Etymology===
-
-prefix "Bio" from "[[biology]]" combined with [[robot]]
+[[bio-]] + [[robot]]
 
 ===Noun===
-'''Biorobot''' (plural: biorobots)
-# A biological organism that has been created and designed by artificial means.
+'''biorobot''' (plural: biorobots)
+# A [[biological]] [[organism]] that has been [[create]]d and [[design]]ed by [[artificial]] means.
 
-== See also: ==
-*[genetic engineering]
-*[Biorobotics]
+===See also===
+*[[genetic engineering]]
+*[[biorobotics]]
+*[[nanobot]]
