+pron; syns; inflections <consummate#44745>

--- a/wiki/consummate.wikitext
+++ b/wiki/consummate.wikitext
@@ -1,18 +1,34 @@
 ==English==
-===Pronunciation===
+===Adjective===
+'''consummate'''
+
+====Pronunciation====
+*[[AHD]]: kŏn'syo͝omət ''or'' kən'sŭmĭt
+*[[IPA]]: (''[[RP]]''): /ˈkɒnsjʊmət/ ''or'' /kənˈsʌmɪt/; (''US''): /ˈkɑnsəmət/ ''or'' /kənˈsʌmɪt/
+*[[SAMPA]]: (''RP''): /<tt>"kQnsjUm@t</tt>/ ''or'' /<tt>k@n"sVmIt</tt>/; (''US''): /<tt>"kAns@m@t</tt>/ ''or'' /<tt>k@n"sVmIt</tt>/
 *{{audio|en-us-consummate-adj.ogg|Audio (US)}}
 
-===Adjective===
 # [[Complete]], [[perfect]], [[absolute]].  
 #:''Always the '''consummate''' gentleman, he always knows how to treat a woman.''
 
-===Pronunciation===
-*{{audio|en-us-consummate-verb.ogg|Audio (US)}}
+====Synonyms====
+*(''complete''): [[absolute]], [[complete]], [[perfect]], [[sheer]], [[total]], [[utter]]
 
 ===Verb (transitive)===
+{{en-infl-reg-other-e|consummat|e||}}
+
+====Pronunciation====
+*AHD: (''RP''): kŏn'syo͝omāt; (''US''): kŏn'səmāt
+*IPA: (''RP''): /ˈkɒnsjʊmeɪt/ (''US''): /ˈkɑnsəmeɪt/
+*SAMPA: (''RP''): /<tt>"kQnsjUmeIt</tt>/; (''US''): /<tt>"kAns@meIt</tt>/
+*{{audio|en-us-consummate-verb.ogg|Audio (US)}}
+
 # To bring to [[completion]] (a [[task]], [[project]], [[goal]], etc.).
 # To make (a [[marriage]]) binding by engaging in [[sexual intercourse]].  
 #:''After the reception, he took her to the [[honeymoon]] suite to '''consummate''' the marriage.''
+
+====Synonyms====
+*(''bring to completion''): [[complete]], [[finish]], [[round off]]
 
 [[pl:Consummate]]
 
