--- a/wiki/mondegreen.wikitext
+++ b/wiki/mondegreen.wikitext
@@ -1,4 +1,5 @@
 ==English==
+
 ===Etymology===
 Coined by Sylvia Wright in 1954 from a mishearing of the stanza in the Scottish ballad ''The Bonny Earl of Murray''
 :Ye Highlands and Ye Lowlands
@@ -8,7 +9,6 @@ Coined by Sylvia Wright in 1954 from a mishearing of the stanza in the Scottish 
 
 ===Noun===
 '''mondegreen'''
-
 #A form of [[error]] arising from mishearing a [[spoken]] or [[sung]] [[phrase]], as in Bob Dylan's "The ants are my friends, blowin' in the wind."
 
 ===See also===
@@ -16,3 +16,4 @@ Coined by Sylvia Wright in 1954 from a mishearing of the stanza in the Scottish 
 *[[folk etymology]]
 *[[malapropism]]
 *[[w:Mondegreen|Wikipedia article on mondegreens]]
+*[[Saint-Cloud Paris Match]]
