fmt; expanded pron; +pron of f fr <content#9066>

--- a/wiki/content.wikitext
+++ b/wiki/content.wikitext
@@ -1,51 +1,42 @@
-
 ==English==
-===Pronunciation===
-*[[w:IPA|IPA]]: /'kɒntɛnt/
 ====Noun====
-'''content''' (''[[uncountable]]'')
+'''content''' (''[[uncountable]] and [[countable]]; plural'' '''contents''')
 
-#That which is [[contain]]ed.
-#''(mathematics:)'' The [[n-dimensional|''n''-dimensional]] space contained by an ''n''-dimensional [[polytope]] (called ''[[volume]]'' in the case of a [[polyhedron]] and ''[[area]]'' in the case of a [[polygon]]).
+====Pronunciation====
+*[[AHD]]: kŏn'tĕnt
+*[[IPA]]: /'kɒntɛnt/ (''[[RP]]''), /'kɑntɛnt/ (''US'')
+*[[SAMPA]]: /<tt>"kQntEnt</tt>/ (''RP''), /<tt>"kAntEnt</tt>/ (''US'')
+
+#(''uncountable'') That which is [[contain]]ed.
+#{{mathematics}} The [[n-dimensional|''n''-dimensional]] space contained by an ''n''-dimensional [[polytope]] (called ''[[volume]]'' in the case of a [[polyhedron]] and ''[[area]]'' in the case of a [[polygon]]).
+#''See also'' '''[[contents]]'''
 
 =====Translations=====
 
 '''that which is contained'''
-{| border=0  width=100%
-|-
-|bgcolor="#FFFFE0" valign=top width=48%|
-{|
-*'''Dutch''': [[inhoud]] ''m''
-*'''Finnish''': [[sisältö]] (1)
-*'''French''': [[contenu]] ''m''
-|}
-| width=1% |
-|bgcolor="#FFFFE0" valign=top width=48%|
-{|
-*'''German''': [[Inhalt]] ''m''
-*'''Ido''': -ed
-*'''Italian''': [[contenuto]] ''m''
-*'''Swedish''': [[innehåll]] ''n''
-|}
-|}
+{{top}}
+*Dutch: [[inhoud]] ''m''
+*Finnish: [[sisältö]]
+*French: [[contenu]] ''m''
+{{mid}}
+*German: [[Inhalt]] ''m''<!--This doesn't look right: *[[Ido]]: -ed-->
+*Italian: [[contenuto]] ''m''
+*Swedish: [[innehåll]] ''n''
+{{bottom}}
 
-'''space contained by a polytope'''
-{| border=0  width=100%
-|-
-|bgcolor="#FFFFE0" valign=top width=48%|
-{|
-|}
-| width=1% |
-|bgcolor="#FFFFE0" valign=top width=48%|
-{|
-|}
-|}
-
-===Pronunciation===
-*[[w:IPA|IPA]]: /kən'tɛnt/
+'''mathematics: space contained by a polytope'''
+{{top}}
+{{mid}}
+{{bottom}}
 
 ====Adjective====
-'''content''' (''[[comparative]]'' '''more content''', ''[[superlative]]'' '''most content''')
+'''content''' ({{compar}} '''more content''', {{superl}} '''most content''')
+
+====Pronunciation====
+*[[AHD]]: kəntĕnt'
+*[[IPA]]: /kən'tɛnt/
+*[[SAMPA]]: /<tt>k@n"tEnt</tt>
+
 #Satisfied; in a state of [[satisfaction]].
 
 =====Synonyms=====
@@ -57,50 +48,39 @@
 =====Translations=====
 
 '''satisfied'''
-{| border=0  width=100%
-|-
-|bgcolor="#FFFFE0" valign=top width=48%|
-{|
-*'''Dutch''': [[tevreden]]
-*'''Finnish''': [[tyytyväinen]]
-*'''French''': content ''m'', contente ''f''
-|}
-| width=1% |
-|bgcolor="#FFFFE0" valign=top width=48%|
-{|
-*'''German''': [[zufrieden]]
-*'''Swedish''': [[nöjd]], [[tillfreds]], [[tillfredsställd]]
-|}
-|}
+{{top}}}
+*Dutch: [[tevreden]]
+*Finnish: [[tyytyväinen]]
+*French: content ''m'', contente ''f''
+{{mid}}
+*German: [[zufrieden]]
+*Swedish: [[nöjd]], [[tillfreds]], [[tillfredsställd]]
+{{bottom}}
 
 ====Transitive verb====
-'''to content''' ([[contenting]], [[contented]])
+{{en-infl-reg-consonant|content||}}
+
+====Pronunciation====
+''As for the adjective''
 
 #To satisfy. 
 #:''You can't have any more - you'll have to '''content''' yourself with what you already have.''
 
 =====Translations=====
 '''satisfy'''
-{| border=0  width=100%
-|-
-|bgcolor="#FFFFE0" valign=top width=48%|
-{|
+{{top}}
 *Dutch: [[vergenoegen]], [[tevredenstellen]]
-*'''Finnish''': [[tyydyttää]]
-*'''French''': [[satisfaire]]
-*'''Italian''': [[soddisfare]]
-|}
-| width=1% |
-|bgcolor="#FFFFE0" valign=top width=48%|
-{|
-*'''Swedish''': [[nöja]]
-|}
-|}
+*Finnish: [[tyydyttää]]
+*French: [[satisfaire]]
+{{mid}}
+*Italian: [[soddisfare]]
+*Swedish: [[nöja]]
+{{bottom}}
 
 ----
 ==French==
 ===Pronunciation===
-*[[w:IPA|IPA]]: /kɔ̃ntɑ̃/
+*[[IPA]]: /kɔ̃ntɑ̃/ ''m singular and plural'', /kɔ̃ntɑ̃t/ ''f singular and plural''
 
 ===Homophones===
 *[[contant]], [[comptant]]
@@ -108,7 +88,7 @@
 ===Adjective===
 '''content''' ''m'' (''f'' '''[[contente]]''', ''m plural'' '''[[contents#French|contents]]''', ''f plural'' '''[[contentes]]''')
 
-#[[content]], [[satisfied]], [[pleased]]
+#content, [[satisfied]], [[pleased]]
 
 ===See also===
 *[[contented]]
