--- a/wiki/indeed.wikitext
+++ b/wiki/indeed.wikitext
@@ -19,6 +19,7 @@ From '''in''' + '''[[deed]]''' (similar to ''"in fact"'')
 ====Translations====
 *Finnish: [[todellakin]]
 *French: [[en fait]]
+*German: [[allerdings]], [[gewiss]], [[in der Tat]]
 *Latin: [[vere]], [[quidem]]
 *Spanish: [[en verdad]], [[verdaderamente]]
 
