--- a/wiki/sail.wikitext
+++ b/wiki/sail.wikitext
@@ -14,6 +14,7 @@
 *Italian: [[vela]] ''f'' (1), [[pala]] (3)
 *Polish: [[żagiel]] ''m'' (1)
 *Romanian: [[velă]] ''f'' (1)
+*Spanish: [[vela]] ''f''
 *Swedish: [[segel]] ''n'' (1)
 
 ==Verb==
