--- a/wiki/copy.wikitext
+++ b/wiki/copy.wikitext
@@ -42,7 +42,7 @@
 * [[copier]]
 
 ===Translations===
-*[[Finnish]]: [[kopio]]
+*[[Finnish]]: [[jäljennös]], [[kopio]]
 *German: [[Kopie]] ''f'' (1), [[Nachahmung]] ''f'' (2)
 *[[Italian]]: [[copia]] ''f''
 *[[Spanish]]: [[copia]] ''f''
