--- a/wiki/copy.wikitext
+++ b/wiki/copy.wikitext
@@ -17,7 +17,7 @@
 #: ''Submit all copy to the appropriate editor''
 
 ===Translations===
-*[[Finnish]]: [[kopioida]] (1,2), [[vastaanottaa]] (3)
+*[[Finnish]]: [[jäljentää]], [[kopioida]] (1,2), [[vastaanottaa]] (3)
 *German: [[kopieren]] (1), [[nachmachen]] (2), [[empfangen]] (3) 
 *[[Italian]]: [[copiare]] (1,2), [[ricevere]] (3)
 *[[Russian]]: [[копировать]]
