--- a/wiki/crackhead.wikitext
+++ b/wiki/crackhead.wikitext
@@ -1,12 +1,12 @@
 A '''crackhead''' is a person who is [[drug addiction|addicted]] to [[crack cocaine]]. 
 
 ==Usage==
-It originally was only used to refer to crack users that are not just desperate to get more crack, but act manic, jittery, and wild, so they stand out even among other crack users. 
+It originally was only used to refer to crack users that are not just desperate to get more crack, but act manic, jittery, and wild, so they stand out even among other crack users. Those labeled as crackheads are also often associated with [[homelessness]].
 
-The term more recently has become an [[insult]], to describe anyone who seems to be acting foolishly. 
+The term, more recently, has become an [[insult]], to describe anyone who seems to be acting foolishly. 
 
 ==History==
-"Crackheads" appeared in great numbers during the [[1980s]], as crack cocaine became more available, cheaper, and of higher potency than other forms of [[cocaine]]. Crack addicts were and are a largely [[urban]] phenomenon. Those labeled as crackheads are also often associated with [[homelessness]].
+"Crackheads" appeared in great numbers during the [[1980s]], as crack cocaine became more available, cheaper, and of higher potency than other forms of [[cocaine]]. Crack addicts were and are a largely [[urban]] phenomenon. 
 
 [[Category:Drugs]]
 [[Category:Slang]]
