--- a/wiki/bucket.wikitext
+++ b/wiki/bucket.wikitext
@@ -55,6 +55,7 @@ From [[w:Old English language|Old English]][[category:Old English derivations]] 
 *[[Breton]]: [[sailh]] ''f'' -où
 *Czech: [[kýbl#Czech|kýbl]]
 *Dutch: [[emmer]] ''m''
+*Finnish: [[ämpäri]]
 *French: [[seau]] ''m''
 *[[Frisian]]: [[amer]]
 *German: [[Eimer]] ''m''
