--- a/wiki/bucket.wikitext
+++ b/wiki/bucket.wikitext
@@ -83,6 +83,7 @@ From [[w:Old English language|Old English]][[category:Old English derivations]] 
 {|
 <!--Put translations for languages from A to I here-->
 *Dutch: [[emmer]] ''m''
+*Finnish: [[ämpärillinen]]
 *German: ein [[Eimer]] [[voll]] ''m''
 |}
 | width=1% |
