derived terms <cephalo-#78079>

--- a/wiki/cephalo-.wikitext
+++ b/wiki/cephalo-.wikitext
@@ -1,4 +1,21 @@
 ==English==
 ===Prefix===
-''' chloro- '''
-#''(biology)'' relating to the brain
+''' cephalo-'''  (or ''cephal-'' before a vowel)
+#{{biology}} relating to the [[brain]] or [[head]]
+===Derived terms===
+*[[cephalad]]
+*[[cephalalgia]]
+*[[cephalexin]]
+*[[cephalic]]
+*[[cephalic index]] 
+*[[cephalin]]
+*[[cephalization]] 
+*[[cephalochordate]] 
+*[[cephalometer]]
+*[[cephalometry]]
+*[[cephalopod]]
+*[[cephalosporin]] 
+*[[cephalothin]]
+*[[cephalothorax]]
+===See also===
+*[[-cephalic]]
