pron; checktrans; syns; some more translations; ants <contract#57986>

--- a/wiki/contract.wikitext
+++ b/wiki/contract.wikitext
@@ -1,35 +1,109 @@
 ==English==
 ===Etymology===
-From Latin ''[[contractus]]'', p.p. of ''[[contrahere]] to contract; con- + trahere to [[draw]]
+{{L.}} ''[[contractus]]'', past participle of ''[[contrahere]]'', to contract, from ''[[con-#Latin|con-]]'' + ''[[trahere]]'', to draw
 
 ===Pronunciation===
-*{{audio|en-us-contract-noun.ogg|Audio (US)}}
+*[[AHD]]: kŏn'trăkt
+*[[IPA]]: (''[[RP]]''): /ˈkɒntrækt/; (''US'') /ˈkɑntrækt/
+*[[SAMPA]]: (''RP''): /<tt>"kQntr{kt</tt>/; (''US''): /<tt>"kAntr{kt</tt>/
+**{{audio|en-us-advocate-noun.ogg|Audio (US)}}*{{audio|en-us-contract-noun.ogg|Audio (US)}}
 
 ===Noun===
-'''contract
-#A (written) [[agreement]] that is [[legally]] [[binding]]
-#a [[job]] or [[work]] order, often [[temporary]] or of fixed [[duration]] and governed by a written agreement
+'''contract''' (''plural'' '''contracts''')
+#A (written) [[agreement]] that is [[legally]] [[binding]].
+#A [[job]] or [[work]] order, often [[temporary]] or of fixed [[duration]] and governed by a written agreement.
 
-===Translations===
+====Synonyms====
+*(''written agreement''): [[agreement]]
+
+====Translations====
+
+'''written agreement that is legally binding'''
+{{top}}
+*French: [[contrat]] ''m''
+*German: [[Vertrag]] ''m''
+{{mid}}
+*Italian: [[contratto]] ''m''
+{{bottom}}
+
+'''job governed by a written agreement'''
+{{top}}
+{{mid}}
+{{bottom}}
+
+=====Translations to be checked=====
+<!--Remove this section once all of the translations below have been moved into the tables above.-->
+{{checktrans}}
+
 *Finnish: [[sopimus]]
-*German: [[Vertrag]]
 *Polish: [[umowa]] ''f''
 *Swedish: ett [[kontrakt]]
 
 ===Transitive verb===
-#to enter into a contract or written agreement with some other party
+{{en-infl-reg-consonant|contract||}}
 
-===Pronunciation===
+====Pronunciation====
+*AHD: kəntrăkt'
+*IPA: /kənˈtrækt/
+*SAMPA: /<tt>k@n"tr{kt</tt>/
 *{{audio|en-us-contract-verb2.ogg|Audio (US)}}
 
+#To enter into a contract or written agreement (with some other party).
+
+====Translations====
+
+'''enter into a contract with'''
+{{top}}
+{{mid}}
+{{bottom}}
+
 ===Transitive verb===
+{{en-infl-reg-consonant|contract||}}
+
+====Pronunciation====
+''As for the verb above''
+
 '''contract'''
-#to gain or acquire
+
+#To gain or acquire (an illness).
+
+====Synonyms====
+*(''gain or acquire (an illness)''): [[catch]], [[get]]
+
+====Translations====
+
+'''gain or acquire'''
+{{top}}
+*French: [[contracter]]
+{{mid}}
+*Italian: [[contrarre]]
+{{bottom}}
 
 ===Intransitive verb===
 '''contract'''
-# to draw [[together]] or [[nearer]]; to [[shorten]], [[narrow]], or [[lessen]]
-#:''The snail's body '''contracted''' back into its shell.''
+
+====Pronunciation====
+''As for the verb above''
+
+#To draw [[together]] or [[nearer]]; to [[shorten]], [[narrow]], or [[lessen]].
+#:''The snail's body '''contracted''' into its shell.''
+
+====Synonyms====
+*(''lessen''): [[abate]], [[decrease]], [[lessen]], [[reduce]]
+*(''shorten''): [[shorten]], [[shrink]]
+
+====Antonyms====
+*(''lessen''): [[increase]]
+*(''shorten''): [[grow]], [[lengthen]]
+
+====Translations====
+
+'''draw together; shorten; lessen'''
+{{top}}
+*French: [[se contracter]]
+{{mid}}
+*Italian: [[contrarre]]
+{{bottom}}
 
 [[Category:English heteronyms]]
 
