/* Derived terms */ <-cephalic#187949>

--- a/wiki/-cephalic.wikitext
+++ b/wiki/-cephalic.wikitext
@@ -4,11 +4,14 @@
 # having the specified [[type]] of [[head]] or [[brain]]
 # having the specified [[number]] of heads
 ===Derived terms===
-*[[brachiocephalic]] / [[brachycephalic]]]
+*[[brachiocephalic]] / [[brachycephalic]]
 *[[dolichocephalic]]
+*[[macrocephalic]]
 *[[mesocephalic]]
+*[[microcephalic]]
 *[[normocephalic]]
 *[[scaphocephalic]]
+
 ===See also===
 *[[cephalic]]
 *[[cephalo-]]
