See talk. Needs work. <hotel#42423>

--- a/wiki/hotel.wikitext
+++ b/wiki/hotel.wikitext
@@ -12,6 +12,10 @@
 
 # An [[establishment]] that provides [[accommodation]] and other services for paying guests.
 # The letter ''H'' in the [[ICAO spelling alphabet]]. 
+
+===Adjective===
+(to be added)
+
 ====Translations====
 
 '''establishment providing accommodation'''
