--- a/wiki/mercurial.wikitext
+++ b/wiki/mercurial.wikitext
@@ -1,22 +1,27 @@
-==Pronunciation==
+==English==
+
+===Pronunciation===
 mer*cu"ri*al
 
-==Adjective==
-# related to the [[Roman]] [[god]] [[Mercury]]
-# related to the [[planet]] Mercury
-# having [[characteristic]]s of the Roman god Mercury, such as [[speed]]
-# [[contain]]ing the [[element]] mercury
-# [[volatile]]
-#* Synonyms
-#** [[erratic]]
-#** [[unstable]]
+===Adjective===
+'''mercurial'''
+# Related to the [[Roman]] [[god]] [[Mercury]].
+# Related to the [[planet]] Mercury.
+# Having [[characteristic]]s of the Roman god Mercury, such as [[speed]].
+# [[contain|Contain]]ing the [[element]] mercury.
+# [[volatile|Volatile]].
 
-==Noun==
-# a [[chemical]] containing mercury
+===Synonyms===
+* [[erratic]]
+* [[unstable]]
+
+===Noun===
+'''mercurial'''
+# A [[chemical]] containing mercury.
 
 ==Related words==
 * [[mercurially]]
-* mercury
+* [[mercury]]
 
 [[Category:English adjectives]]
 [[Category:English nouns]]
