--- a/wiki/convict.wikitext
+++ b/wiki/convict.wikitext
@@ -1,22 +1,26 @@
 ==English==
-
-===Pronunciation===
-*{{IPA|/kənˈvɪkt/}}
-*{{SAMPA}} /<tt>k@n"vIkt</tt>/
-
-=== Verb ===
+===Transitive verb===
 {{en-infl-reg-consonant|convict||}}
+
+====Pronunciation====
+*[[AHD]]: kən'vĭkt
+*[[IPA]]: /kənˈvɪkt/
+*[[SAMPA]]: /<tt>"k@nvIkt</tt>/
+
 # To find guilty of a crime as a result of legal proceedings.
 
-===Pronunciation===
-*{{IPA|/ˈkɒnvɪkt/ (''UK'') ''or'' /ˈkɑnvɪkt/ (''US'')}}
-*{{SAMPA}} /<tt>"kQnvIkt</tt> (''UK'') ''or'' /<tt>"kAnvIkt</tt>/ (''US'')
-
 === Noun ===
-'''convict''' (''plural:'' '''[[convicts]]''')
+'''convict''' (''plural'' '''[[convicts]]''')
+
+====Pronunciation====
+*AHD: kŏn'vĭkt
+*IPA: /ˈkɒnvɪkt/ (''RP''); /ˈkɑnvɪkt/ (''US'')
+*SAMPA: /<tt>"kQnvIkt</tt> (''RP''); /<tt>"kAnvIkt</tt>/ (''US'')
+
 # A person convicted of a crime by a judicial body.
 
-===Derived terms===
+===Related terms===
+*[[con]]<!--slang short form of "convict"-->
 *[[conviction]]
 
 [[Category:English heteronyms]]
