--- a/wiki/mercurial.wikitext
+++ b/wiki/mercurial.wikitext
@@ -19,7 +19,7 @@ mer*cu"ri*al
 '''mercurial'''
 # A [[chemical]] containing mercury.
 
-==Related words==
+===Related words===
 * [[mercurially]]
 * [[mercury]]
 
