--- a/wiki/hotel.wikitext
+++ b/wiki/hotel.wikitext
@@ -10,8 +10,8 @@
 ===Noun===
 '''hotel''' (''plural'' '''[[hotels]]''')
 
-# An [[establishment]] that provides [[accommodation]] and other services for paying guests.
-# The letter ''H'' in the [[ICAO spelling alphabet]]. 
+# An [[establishment]] that provides [[accommodation]] and other services for paying guests; normally larger than a [[guest house]], and often one of a [[chain]].
+# The letter ''H'' in the [[ICAO spelling alphabet]].
 
 ===Adjective===
 (to be added)
