--- a/wiki/willy.wikitext
+++ b/wiki/willy.wikitext
@@ -10,7 +10,7 @@
 
 ====Synonyms====
 <!--note: add hypocoristic (childish) synonyms here rather than coarse/taboo slang or "proper" terms-->
-*[[peter]], [[wee-wee]]
+*[[peter]], [[wee-wee]], and many others, [[vulgar]] or [[euphemistic]]
 
 ====Translations====
 *French: [[zizi]] ''m''
