add ==English==, wikify <cyclic redundancy check#187972>

--- a/wiki/cyclic_redundancy_check.wikitext
+++ b/wiki/cyclic_redundancy_check.wikitext
@@ -1,1 +1,5 @@
-(computing) A particular form of [[checksum]], used to validate data which may have become corrupted.
+==English==
+===Noun===
+{{wikipedia}}
+'''[[cyclic]] [[redundancy]] [[check]]'''
+#{{computing}} a type of [[hash function]] used to produce a [[checksum]] used to detect [[transmission]] [[error]]s in [[data]]
