--- a/wiki/penetrating.wikitext
+++ b/wiki/penetrating.wikitext
@@ -1,7 +1,7 @@
 ==English==
 ===Adjective===
 '''penetrating'''
-# To [[pierce]] or [[penetrate]]
+# [[able]] to [[pierce]] or [[penetrate]]
 : ''The skunk produces a penetrating odor''
-# To demonstrate understanding
+# [[demonstrating]] [[acute]] or [[keen]] [[understanding]]
 : ''His novel shows a penetrating insight into the criminal mind''
