/* Translations */  + more German <vacation#39549>

--- a/wiki/vacation.wikitext
+++ b/wiki/vacation.wikitext
@@ -28,7 +28,7 @@ Definition 4 is found throughout the English-speaking world; definition 1 is res
 *Dutch: [[vakantie]] (1)
 *Finnish: [[loma]]
 *French: [[vacances]] ''f pl'' (1)
-*German: [[Ferien]] ''f pl'' (1), [[Urlaub]] ''m'' (1)
+*German: [[Ferien]] ''f pl'' (1, 4), [[Urlaub]] ''m'' (1); [[Annullierung]] ''f'' (2); [[Preisgabe]] ''f'' (3)
 *Hungarian: [[vakáció]]
 *Italian: [[vacanza]] ''f'' (1)
 *Japanese: [[旅行]] (ryok&#333;, ''travelling''), [[休み]] (yasumi, ''break from work'')
