--- a/wiki/antelope.wikitext
+++ b/wiki/antelope.wikitext
@@ -9,6 +9,7 @@
 ====Translations====
 *'''Bosnian''': [[antilopa]] ''m''
 *'''Catalan''': [[antílop]] ''m''
+*'''Danish''': [[antilope]]
 *'''Dutch''': [[antilope]]
 *'''Finnish''': [[antilooppi]] (1)
 *'''French''': [[Antilope]] ''f''
