...and correct... <cyclic redundancy check#187972>

--- a/wiki/cyclic_redundancy_check.wikitext
+++ b/wiki/cyclic_redundancy_check.wikitext
@@ -1,5 +1,6 @@
 ==English==
+
 ===Noun===
 {{wikipedia}}
-'''[[cyclic]] [[redundancy]] [[check]]'''
-#{{computing}} a type of [[hash function]] used to produce a [[checksum]] used to detect [[transmission]] [[error]]s in [[data]]
+'''[[cyclic]] [[redundancy]] [[check]]''' 
+# {{computing}}: A type of [[hash function]] used to produce a [[checksum]] used to detect ''and correct'' [[transmission]] [[error]]s in [[data]].  Abbreviation: [[CRC]] (initiailism.)
