/* Translations */  + German <holiday#42839>

--- a/wiki/holiday.wikitext
+++ b/wiki/holiday.wikitext
@@ -9,6 +9,7 @@
 ====Translations====
 *Czech: [[prázdniny]] 
 *Finnish: [[loma]], [[lomapäivä]], [[juhlapäivä]], [[pyhäpäivä]]
+*German: [[Feiertag]] ''m'' (1, 2); [[Urlaub]] ''m'' (3, 4); [[Ferien]] ''pl'' (4)
 *[[Romanica]]: [[festa]] ''f'', [[feria]] ''f'', [[vacation]] ''f''
 *Spanish [[fiesta]]
 *Swedish: [[helgdag]], [[ledighet]]
