/* Noun */ <milk pudding#187993>

--- a/wiki/milk_pudding.wikitext
+++ b/wiki/milk_pudding.wikitext
@@ -1,7 +1,8 @@
 ==English==
 ===Noun===
 '''[[milk]] [[pudding]]'''
-#(''mostly British?'' any of several [[simple]] [[cooked]] [[dessert]]s made from [[sweetened]] [[milk]] and some [[starch]]y [[ingredient]]
+#(''mostly British?'') any of several [[simple]] [[cooked]] [[dessert]]s made from [[sweetened]] [[milk]] and some [[starch]]y [[ingredient]]
+
 ===See also===
 *[[macaroni pudding]]
 *[[rice pudding]]
