--- a/wiki/sn.wikitext
+++ b/wiki/sn.wikitext
@@ -1,17 +1,11 @@
+:See also [[Sn]]
+----
 ==English==
+
 ==={{abbreviation}}===
-'''Sn'''
+'''sn''' or '''SN'''
 
-#Sunday
-
-
-==Translingual==
-===Etymology===
-{{L.}} ''[[stannum]]'', tin
-===Symbol===
-'''Sn'''
-#{{chemistry}} symbol for [[Tin]].
-[[Category:Symbols for chemical elements]]
+# {{cattag|Internet}} [[screename]]
 
 [[fr:Sn]]
 [[ja:Sn]]
