--- a/wiki/EOD.wikitext
+++ b/wiki/EOD.wikitext
@@ -1,7 +1,8 @@
-=={{abbreviation}}==
+==English==
+==={{initialism}}===
 '''EOD'''
 
-#{{computing}}: end of data.
+#{{computing}} end of data
 
 ===Related terms===
 *[[BOF]]
