--- a/wiki/BOF.wikitext
+++ b/wiki/BOF.wikitext
@@ -1,6 +1,10 @@
-==French==
-'''bof!'''
-===Interjection===
-# [[so what]]!, [[never mind]]
-====See Also====
-* [[BOF]]
+==English==
+==={{initialism}}===
+'''BOF'''
+
+#{{cattag|Computing}}: beginning of file.
+#{{internet}}: big old frown.
+#birds of a feather (group of people with common interests...from the phrase "Birds of a feather flock together").
+
+===Related terms===
+*[[EOF]]
