--- a/wiki/da.wikitext
+++ b/wiki/da.wikitext
@@ -1,5 +1,5 @@
 ==English==
-==={{Initialism}}===
+==={{initialism}}===
 '''DA''' (''plural'' '''DAs''')
 
 #[[district attorney]]
@@ -7,3 +7,4 @@
 #[[duck's arse]] (''haircut'')
 #Department of Agriculture
 #Dairy Association
+#[[Doctor of Arts]]
