--- a/wiki/Doctor_of_Arts.wikitext
+++ b/wiki/Doctor_of_Arts.wikitext
@@ -1,6 +1,7 @@
+==English==
 ===Noun===
+'''Doctor of Arts'''
 
-====Abbreviation for:====
+#a terminal degree similar to an [[Ed.D.]] or a [[Ph.D.]] but with a focus on content speciality. The DA may also be conferred as a prestigious honorary doctorate with the added designation of "[[Honoris Causa]]".
 
-#Doctor of Arts, a terminal degree similar to an [[Ed.D.]] or a [[Ph.D.]] but with a focus on content speciality. The D.A. may also be conferred as a prestigious honorary doctorate with the added designation of "[[Honoris Causa]]". See also: [[doctor]]
-#District Attorney.
+See also: [[doctor]]
