--- a/wiki/brass_monkey.wikitext
+++ b/wiki/brass_monkey.wikitext
@@ -9,7 +9,7 @@
 ===Adjective phrase===
 '''brass monkey''' (''no [[comparative]] or [[superlative]], used only before the noun'')
 #a cocktail of [[vodka]], [[rum]] and orange juice, sometimes with the addition of [[galliano]]
-#a kind of [[inexpensive]] [[liquer]]
+#a kind of [[inexpensive]] [[liqueur]]
 #an Australian beer 
 #said of the [[weather]] when it is very [[cold]].
 #:''It's '''brass monkey''' weather today, isn't it?''
