--- a/wiki/DFA.wikitext
+++ b/wiki/DFA.wikitext
@@ -1,5 +1,5 @@
 ==English==
-===Abbreviation===
+==={{abbreviation}}===
 '''DFA'''
 
-#[[Deterministic finite-state automaton]].
+#[[Deterministic finite-state automaton]]
