--- a/wiki/D.F.A..wikitext
+++ b/wiki/D.F.A..wikitext
@@ -1,3 +1,5 @@
-'''Abbreviation:'''
+==English==
+==={{initialism}}===
+'''D.F.A.'''
 
-#[[Doctor]] of Fine Arts, a [[terminal]] higher [[education]] [[degree]].
+#[[Doctor]] of Fine Arts, a [[terminal]] higher [[education]] [[degree]]
