<Doctor of Musical Arts#34388>

--- a/wiki/Doctor_of_Musical_Arts.wikitext
+++ b/wiki/Doctor_of_Musical_Arts.wikitext
@@ -1,3 +1,7 @@
+==English==
 ===Noun===
+'''Doctor of Musical Arts'''
 
-A terminal degree intended for musicians who wish to combine the highest attainments in their major area with proven accomplishment in theoretical studies and musicology. See also: [[doctor]]
+#A terminal degree intended for musicians who wish to combine the highest attainments in their major area with proven accomplishment in theoretical studies and musicology. 
+
+See also: [[doctor]]
