--- a/wiki/Th.D..wikitext
+++ b/wiki/Th.D..wikitext
@@ -1,7 +1,8 @@
-'''Noun'''
+==English==
+==={{abbreviation}}===
+'''Th.D.'''
 
-====Abbreviation for:====
+#(''degree'') Doctor of Theology
 
-Doctor of Theology, a terminal degree.
 
 See also: [[doctor]]
