--- a/wiki/Ph.D..wikitext
+++ b/wiki/Ph.D..wikitext
@@ -5,7 +5,7 @@ Latin ''[[Philosophiae Doctor]]
 ===Noun===
 '''Ph.D.'''
 
-#abbreviation of Doctor of Philosophy, a [[terminal]] [[research]] [[degree]]
+#{{abbreviation}} of Doctor of Philosophy, a [[terminal]] [[research]] [[degree]]
 #the [[highest]] of [[academic]] [[degree]]s conferred by a [[college]] or [[university]]
 
 *Also without points (as ''[[PhD]]'') in the UK, where this is the more common form.
