--- a/wiki/I_love_you.wikitext
+++ b/wiki/I_love_you.wikitext
@@ -139,8 +139,8 @@
 *:[[Quérote]] (more common)
 *:[[ámote]] (more formal)
 *Georgian:
-*:[[:ka:მე შენ მიყვარხარ]] ("me shen mikhvarkhar")
-*:[[:ka:მე თქვენ მიყვარხართ]] ("me thqven mikhvarkharth" to more than one person)
+*:[[მე შენ მიყვარხარ]] ("me shen mikhvarkhar")
+*:[[მე თქვენ მიყვარხართ]] ("me thqven mikhvarkharth" to more than one person)
 *German:
 *:[[:de:Ich habe dich gern|Ich habe dich gern]]
 *:[[:de:Ich habe euch gern|Ich habe euch gern]] (to more than one person)
