--- a/wiki/Andover.wikitext
+++ b/wiki/Andover.wikitext
@@ -1,6 +1,6 @@
 ==English==
-===Proper Noun===
+===Proper noun===
 {{wikipedia}}
 '''Andover'''
 
-There are 12 places named Andover.
+# There are 12 places named Andover.
