--- a/wiki/Strasburg.wikitext
+++ b/wiki/Strasburg.wikitext
@@ -1,3 +1,5 @@
+==English==
 ===Proper noun===
 {{wikipedia}}
-A city in Germany, and 8 cities in the United States.
+'''strasburg'''
+# A city in Germany, and 8 cities in the United States.
