--- a/wiki/Db.wikitext
+++ b/wiki/Db.wikitext
@@ -1,14 +1,10 @@
-==See also==
+==English==
+==={{initialism}}===
+'''DB'''
+
+#[[database]]
+
+----
+===See also===
+*[[Db]]
 *[[dB]]
-*[[DB]]
-
-==Translingual==
-===Symbol===
-'''Db'''
-#{{chemistry}} symbol for [[dubnium]]
-[[Category:Symbols for chemical elements]]
-
-[[fr:Db]]
-[[ja:Db]]
-[[pl:Db]]
-[[zh:Db]]
