--- a/wiki/friend.wikitext
+++ b/wiki/friend.wikitext
@@ -73,6 +73,7 @@ From Middle English, from Old English [[freond|frēond]].
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
 <!--Put translations for languages from J to Z here-->
+*Portuguese: (''boyfriend''): [[namorado]]; (''girlfriend''): [[namorada]]
 |}
 |}
 
