--- a/wiki/q.v..wikitext
+++ b/wiki/q.v..wikitext
@@ -1,5 +1,5 @@
 ==English==
-===Abbreviation===
+==={{abbreviation}}===
 '''q.v.''' ''or'' '''qv'''
 
 #''[[Quod vide]]'', Latin phrase meaning "which see".  Used in books, etc, to make reference to other material.
