expand, link to wikipedia <Galliano#188000>

--- a/wiki/Galliano.wikitext
+++ b/wiki/Galliano.wikitext
@@ -1,4 +1,5 @@
 ==English==
 ===Noun===
+{{wikipediapar|Galliano (drink)}}
 '''galliano'''
-# An italian [[liqueur]] flavoured with [[herbs]]
+# A bright yellow [[Italian]] [[liqueur]] flavoured with [[herbs]], [[star anise]] and [[vanilla]]; an ingredient in several [[cocktail]]s including [[Harvey Wallbanger]]
