--- a/wiki/Harari.wikitext
+++ b/wiki/Harari.wikitext
@@ -1,1 +1,5 @@
-This is wikinoary of Harari language
+==English==
+===Noun===
+'''Harari'''
+# an [[ethnic]] [[people]] of [[Ethiopia]]
+# their [[language]]
