--- a/wiki/ISCSI.wikitext
+++ b/wiki/ISCSI.wikitext
@@ -1,7 +1,10 @@
-'''iSCSI''' (pronounced ''eye-skuzzy'') is an acronym that stands for Internet [[SCSI|SCSI]].
+==English==
+==={{acronym}}===
+'''ISCSI''' or '''iSCSI''' 
 
-This is a storage transport protocol that moves [[SCSI]] I/O traffic over a [[TCP/IP|TCP/IP]] connection.
+(pronounced ''eye-skuzzy'')
 
-This is also some times known as an [[IP SAN|IP SAN]].
+#Internet [[SCSI]], a storage transport protocol that moves [[SCSI]] I/O traffic over a [[TCP/IP]] connection
 
-{{wikify}}
+
+Also see [[IP SAN]]
