--- a/wiki/SCSI.wikitext
+++ b/wiki/SCSI.wikitext
@@ -1,9 +1,7 @@
-'''SCSI''' (pronounced ''skuzzy'') is an acronym, standing for Small Computer Systems Interface.
+==English==
+==={{acronym}}===
+'''SCSI''' 
 
-This standard was created in the Dark Ages, but refuses to die.
+(pronounced ''skuzzy'') 
 
-Not to be confused with a competing standard (at the time of SCSI's creation) called SASI (pronounced ''sassy'').
-
-There are SCSI '''standards''', controlled by ANSI T10 committee (see http://t10.org)
-
-{{wikify}}
+#[[Small Computer Systems Interface]]
