--- a/wiki/tat.wikitext
+++ b/wiki/tat.wikitext
@@ -1,1 +1,26 @@
-#redirect [[tat]]
+==English==
+===Noun===
+'''tat'''
+# [[cheap]] and [[vulgar]] [[tastelessness]]; [[sleaze]]
+===Verb===
+'''to tat'''  (''transitive'' or ''intransitive'')
+# to make (something by) [[tatting]]
+
+===See also===
+*[[rat-a-tat-tat]]
+*[[tit for tat]]
+*[[tatt]]
+*[[tatting]]
+*[[tatty]]
+
+[[fr:tat]]
+[[nl:tat]]
+
+[[Category:English concrete nouns]]
+
+==German==
+===Pronunciation===
+{{IPA|[taːt]}}
+===Verb===
+[[Past]] of [[tun]] 'to [[do]]'
+#[[did]]
