--- a/wiki/execs.wikitext
+++ b/wiki/execs.wikitext
@@ -1,3 +1,8 @@
-Execs - (plural noun) Abbreviated form of executives.
+==English==
+==={{abbreviation}}===
+'''execs'''
 
-{{wikify}}
+#executives
+
+
+also see: [[exec]]
