remove humour <Small Computer Systems Interface#188014>

--- a/wiki/Small_Computer_Systems_Interface.wikitext
+++ b/wiki/Small_Computer_Systems_Interface.wikitext
@@ -1,5 +1,5 @@
 ==English==
-===noun phrase===
-'''Small Computer Systems Interface'''
-
-#This standard was created in the Dark Ages, but refuses to die.  Not to be confused with a competing standard (at the time of SCSI's creation) called SASI (pronounced ''sassy'').  There are SCSI '''standards''', controlled by ANSI T10 committee (see http://t10.org)
+===Noun phrase===
+{{wikipediapar|SCSI}}
+'''[[small|Small]] [[computer|Computer]] [[system|Systems]] [[interface|Interface]]'''  (abbreviated ''[[SCSI]]'')
+#{{computing}} a [[standard]] [[interface]] and [[command]] [[set]] for [[transferring]] [[data]] between [[device]]s on a [[bus]]
