--- a/wiki/QBIC.wikitext
+++ b/wiki/QBIC.wikitext
@@ -1,10 +1,10 @@
 ==English==
-===Acronym===
+==={{acronym}}===
 '''QBIC''' {{wikipedia}}
+
 #Query by image [[content]]
+
 
 ====Synonyms====
 *[[CBIR]]
 *[[CBVIR]]
-
-[[Category:Acronyms]]
