--- a/wiki/ADO.wikitext
+++ b/wiki/ADO.wikitext
@@ -1,16 +1,11 @@
 ==English==
+==={{initialism}}===
+'''ADO'''
 
-===Etymology===
-OE. at do, northern form for to do. Cf. {Affair}
+#Active-X Data Objects
 
-===Pronunciation===
-IPA: [[WEAE]] /ʌˈdu/
+----
 
-===Noun===
-# To do; in doing; as, there is nothing ado.
-# Doing; trouble; difficulty; troublesome business; fuss; bustle; as, to make a great ado about trifles.
-
-[[de:ado]]
-[[et:Ado]]
-[[io:Ado]]
-[[it:ado]]
+==Spanish==
+===Abbreviation===
+#Autobuses de Oriente, a long-distance bus (coach) company in Mexico
