/* Translation */ En español y en mexicano <Nahuatl#37510>

--- a/wiki/Nahuatl.wikitext
+++ b/wiki/Nahuatl.wikitext
@@ -1,1 +1,15 @@
-#redirect [[Nahuatl]]
+==English==
+===Noun===
+#'''Nahuatl'''; language spoken by an indigenous people of [[Mexico]].
+
+===Translation===
+#:*{{chr}}: [[ᎾᎱᎠᏢ]]
+#:*{{fr}}: nahuatl ''m''
+#:*{{nl}}: Nahuatl
+#:*{{nah}}: [[náhuatl]], [[nawatl]]
+#:*{{es}}: [[náhuatl]] ''m''
+
+
+[[Category:Nahuatl language]]
+[[fr:nahuatl]]
+[[nl:Nahuatl]]
