--- a/wiki/ASEAN.wikitext
+++ b/wiki/ASEAN.wikitext
@@ -1,8 +1,8 @@
-=={{en}}==
-
-===Noun===
+==English==
+==={{acronym}}===
 '''ASEAN'''
-# (abbreviation) Association of Southeast Asian Nations
+
+#Association of Southeast Asian Nations
 
 ===See also===
 * [[w:ASEAN|Wikipedia article on ASEAN]]
