--- a/wiki/showed.wikitext
+++ b/wiki/showed.wikitext
@@ -1,20 +1,18 @@
+==English==
+
 === Pronunciation ===
 *[[w:SAMPA|SAMPA]]: /'/
 *[[w:IPA|IPA]]: /'ʃowd/
 
 === Verb ===
-
 '''showed'''
-
 # past tense of to [[show]]
 
 === Translations ===
 *[[Dutch]]: [[toonde]], [[toonden]]
 
 === Verb ===
-
 '''showed'''
-
 # past participle of to [[show]]
 
 === Translations ===
