--- a/wiki/AOT.wikitext
+++ b/wiki/AOT.wikitext
@@ -1,7 +1,8 @@
 ==English==
-===Initialism===
+==={{initialism}}===
 '''AOT'''
-#abbreviation for ''Ahead Of Time''; in general, any process that produces a result before it is needed
+
+#Ahead Of Time; in general, any process that produces a result before it is needed
 
 ===Related terms===
 *[[JIT]]
