--- a/wiki/effort.wikitext
+++ b/wiki/effort.wikitext
@@ -1,7 +1,9 @@
-=={{en}}==
+==English==
+
 ===Noun===
-# the [[amount]] of [[work]] involved in [[achieving]] something; [[exertion]]
-# [[endeavour]]
+'''effort'''  (''plural:'' '''[[efforts]]''')
+# The [[amount]] of [[work]] involved in [[achieving]] something; [[exertion]].
+# An [[endeavour]].
 
 ====Translations====
 '''the amount of work involved in achieving something'''
