--- a/wiki/ARPU.wikitext
+++ b/wiki/ARPU.wikitext
@@ -1,4 +1,9 @@
-ARPU is '''Average Revenue Per Unit.'''
+==English==
+==={{initialism}}===
+'''ARPU'''
+
+#Average Revenue Per Unit
+
 This is a measure of how much money an organization brings in per subscriber or customer.
 ARPU is often measured per month. The goal of companies is to sell VALUE ADDED SERVICES to raise their ARPU.
 
