--- a/wiki/AHD.wikitext
+++ b/wiki/AHD.wikitext
@@ -1,8 +1,8 @@
 ==English==
-===Abbreviation===
+==={{initialism}}===
 '''AHD'''
 
-# The American Heritage Dictionary
+# American Heritage Dictionary
 
 ===See also===
 *[[w:The American Heritage Dictionary of the English Language|Wikipedia article on the AHD]]
