--- a/wiki/AIFF.wikitext
+++ b/wiki/AIFF.wikitext
@@ -2,4 +2,4 @@
 ==={{initialism}}===
 '''AIFF'''
 
-#[[Audio Interchange File Format]]
+#[[w:Audio Interchange File Format|Audio Interchange File Format]]
